--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,10 @@ body {
   min-height: 100vh;
 }
 
+hr {
+  margin: 1em 0;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -37,9 +41,10 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+  line-height: normal;
 }
 
-.normal-text {
+.normal-text, p {
   font-size: 1em;
   font-weight: 400;
 }
@@ -49,9 +54,28 @@ h2 {
   font-weight: 800;
 }
 
+.caution {
+  color: darkorange;
+  font-weight: 700;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  height: 0;
+  overflow: hidden;
+}
+
 .zombie-video {
+  position: absolute;
+  top: 0;
+  left: 0;
   border-radius: 10px;
   border: 2px solid red;
+  width: calc(100% - 8px);
+  height: calc(100% - 8px);
+  padding: 2px;
 }
 
 .card-wrapper {
@@ -74,7 +98,7 @@ h2 {
 
 button {
   border-radius: 5px;
-  border: 1px solid transparent;
+  border: 1px solid firebrick;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -105,5 +129,13 @@ button:disabled {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+@media screen and (max-width: 425px) {
+  .card-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
