--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,11 @@ span {
   color: yellowgreen;
 }
 
+image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .normal-text, p {
   font-size: 1em;
   font-weight: 400;
